--- a/public/frontend/medicio/css/style-old.css
+++ b/public/frontend/medicio/css/style-old.css
@@ -1,9 +1,3 @@
-/*
-    Theme Name: Medicio
-    Theme URL: https://bootstrapmade.com/medicio-free-bootstrap-theme/
-    Author: BootstrapMade
-    Author URL: https://bootstrapmade.com
-*/
 
 /* ==== Google font ==== */
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,600,700,800|Roboto:400,500,700,900');
@@ -231,7 +225,7 @@ blockquote strong {
 /* =======
 Top area
 ======== */
-.top-area {
+/*.top-area {
 	-webkit-transition: all .4s ease-in-out;
     -moz-transition: all .4s ease-in-out;
     transition: all .4s ease-in-out;
@@ -253,7 +247,7 @@ Top area
 .top-area p {
 	margin-bottom: 10px;
 }
-
+*/
 /* ===========
 Navigation
 ============= */
@@ -266,7 +260,7 @@ Navigation
 
 .navbar-brand.reduce {
 	margin-top:0;
-  padding-top: 5px;
+  	padding-top: 5px;
 	padding-bottom: 5px;
  	-webkit-transition: all .4s ease-in-out;
     -moz-transition: all .4s ease-in-out;
@@ -296,7 +290,6 @@ Navigation
     border-bottom: 1px solid rgba(255,255,255,.3);	
 	
 }
-
 
 
 .navbar-brand {
@@ -344,7 +337,7 @@ Navigation
 
 .navbar.navbar-custom.top-nav-collapse {
 	background: #fff;
-	
+	opacity: 0.9;
 }
 
 .navbar.navbar-custom.top-nav-collapse .navigation {
@@ -760,11 +753,11 @@ hr.bold {
 }
 
 .intro-content {
-	background: url(../img/bg/bg1.jpg) no-repeat top center;
+	background: url(../img/bg/bg1.jpg) no-repeat center center fixed;
 	-webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
-  	background-size: cover;	
+  	background-size: cover;
 	padding:200px 0 60px;
 }
 .intro-content.intro-nobg {
@@ -1114,11 +1107,12 @@ Testimonial
 =========================== */
 
 #testimonial {
-	background: url(../img/bg/bg2.jpg) no-repeat top center;
+	background: url(../img/bg/bg2.jpg) no-repeat center center fixed;
 	-webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
   	background-size: cover;
+	
 }
 
 .carousel-control.left,.carousel-control.right  {background:none;width:25px; z-index: 999;}
@@ -1234,16 +1228,16 @@ Testimonial
 
 .company-social .social-facebook a i{background: #3873ae;}
 .company-social .social-twitter a i{background: #62c6f8;}
-.company-social .social-dribble a i{background: #d74980;}
-.company-social .social-deviantart a i{background: #8da356;}
+.company-social .social-instagram a i{background: #d74980;}
+.company-social .social-youtube a i{background: #8da356;}
 .company-social .social-google a i {background: #000;}
-.company-social .social-vimeo a i {background: #51a6d3;}
+.company-social .social-linkedin a i {background: #51a6d3;}
 .company-social .social-facebook a:hover i {background: #4893ce;}
 .company-social .social-twitter a:hover i {background: #82e6ff;}
-.company-social .social-dribble a:hover i {background: #f769a0;}
-.company-social .social-deviantart a:hover i {background: #adc376;}
+.company-social .social-instagram a:hover i {background: #f769a0;}
+.company-social .social-youtube a:hover i {background: #adc376;}
 .company-social .social-google a:hover i {background: #333;}
-.company-social .social-vimeo a:hover i {background: #71c6f3;}
+.company-social .social-linkedin a:hover i {background: #71c6f3;}
 
 
 .carousel-inner > .item {
@@ -2069,9 +2063,6 @@ a.btn:focus{
 	.navbar.navbar-custom.navbar-fixed-top {
 		margin-bottom: 30px;
 	}
-	
-
-	
 
 
 	.box {
@@ -2096,98 +2087,14 @@ a.btn:focus{
 	}
 }
 
-/***********************************************/
-/*************HOME FULL-MODAL*******************/
-/***********************************************/
+@media screen and (max-width: 420px) {
+  .img-service {
+    display: none;
+  }
+}
 
-.home-modal .modal-dialog {
-  margin: 0;
-  height: 100%;
-  width: auto;
-}
-.home-modal .modal-content {
-  border-radius: 0;
-  background-clip: border-box;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-  border: none;
-  min-height: 100%;
-  padding: 100px 0;
-  text-align: center;
-}
-.home-modal .modal-content h2 {
-  margin-bottom: 15px;
-  font-size: 3em;
-}
-.home-modal .modal-content p {
-  margin-bottom: 30px;
-}
-.home-modal .modal-content p.item-intro {
-  margin: 20px 0 30px;
-  font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-style: italic;
-  font-size: 16px;
-}
-.home-modal .modal-content ul.list-inline {
-  margin-bottom: 30px;
-  margin-top: 0;
-}
-.home-modal .modal-content img {
-  margin-bottom: 30px;
-}
-.home-modal .close-modal {
-  position: absolute;
-  width: 75px;
-  height: 75px;
-  background-color: transparent;
-  top: 25px;
-  right: 25px;
-  cursor: pointer;
-}
-.home-modal .close-modal:hover {
-  opacity: 0.3;
-}
-.home-modal .close-modal .lr {
-  height: 75px;
-  width: 1px;
-  margin-left: 35px;
-  background-color: #222222;
-  transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  /* IE 9 */
-  -webkit-transform: rotate(45deg);
-  /* Safari and Chrome */
-  z-index: 1051;
-}
-.home-modal .close-modal .lr .rl {
-  height: 75px;
-  width: 1px;
-  background-color: #222222;
-  transform: rotate(90deg);
-  -ms-transform: rotate(90deg);
-  /* IE 9 */
-  -webkit-transform: rotate(90deg);
-  /* Safari and Chrome */
-  z-index: 1052;
-}
-.home-modal .modal-backdrop {
-  opacity: 0;
-  display: none;
-}
-::-moz-selection {
-  text-shadow: none;
-  background: #87cefa;
-}
-::selection {
-  text-shadow: none;
-  background: #87cefa;
-}
-img::selection {
-  background: transparent;
-}
-img::-moz-selection {
-  background: transparent;
-}
-body {
-  webkit-tap-highlight-color: #87cefa;
+@media screen and (max-width: 420px) {
+  .left-box {
+    display: none;
+  }
 }
